HelloUltraviolet/Fixtures/RejectedSource/Keys/SharedCapturingClosureYieldKeys/Source/Main.uv
//! Rejected async-key specimen for shared-capturing closure yield-key restrictions.

public procedure sharedCapturingClosureYieldKeysReference() -> Async<i32, (), (), !> {
    var shared_value: shared i32 = 1
    let producer = || -> Async<i32, (), (), !> {
        #shared_value read {
            yield 1
        }
        return
    }
    producer()
    return
}
